--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,39 +15,49 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar.Boavizta"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
             android:name=".Error"
-            android:screenOrientation="nosensor"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".NoConnectionInternet"
-            android:screenOrientation="nosensor"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".result.ResultJson"
+            android:exported="true"
+            android:screenOrientation="nosensor" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="nosensor"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:screenOrientation="nosensor"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
